Fixed issue where social buttons were getting cut off.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/money/sass/_sections.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/money/sass/_sections.sass
@@ -113,9 +113,6 @@
     text-align: center
 
   .row-bottom
-    position: absolute
-    bottom: 0
-    left: 0
     padding: 1%
 
 // HEADLINE
